# llama-inference

./: Cargo.toml  Dockerfile
.github/workflows/: ci.yml
src/: main.rs  model.rs  utils.rs
