[package]
name = "llama-inference"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.112"
hf-hub = "0.3.2"
candle-core = "0.3.2"
candle-transformers = "0.3.2"
